# Nibbler

./: .gitignore  .gitmodules  CMakeLists.txt  Canonical.cpp  Makefile  canonicalClass  configure  script.sh  test.cpp
exemples/2nd_exemple/: IEntity.hpp  Makefile  Player.cpp  Player.hpp  Player2.cpp  Player2.hpp  main.cpp
exemples/SFML_2nd_test/: IGraphic.hpp  Makefile  main.cpp  sfmlLib_class.cpp  sfmlLib_class.hpp
exemples/SFML_test/: Makefile
exemples/basic_exemple/: Makefile  main.cpp  square.c  square.cpp
glfw/include/: Glfw.class.hpp
glfw/src/: Glfw.class.cpp
include/: DynamicLibHandler.class.hpp  Game.class.hpp  GameEntity.class.hpp  IGraphic.class.hpp  KeyValue.hpp  Lib.hpp  Map.class.hpp  Player.class.hpp  Snake.class.hpp  nibbler.h
includes/: DynamicLibHandler.class.hpp  Game.class.hpp  GameEntity.class.hpp  IGraphic.class.hpp  Map.class.hpp  Player.class.hpp  Snake.class.hpp  Time.class.hpp  game_entity.class.hpp  libft.hpp  nibbler.h
ncurses/include/: Ncurses.class.hpp
ncurses/src/: Ncurses.class.cpp
sfml/: Makefile  Sfml.class.cpp  Sfml.class.hpp
sfml/include/: Sfml.class.hpp
sfml/src/: Sfml.class.cpp
src/: DynamicLibHandler.class.cpp  Game.class.cpp  GameEntity.class.cpp  Lib.cpp  Map.class.cpp  Player.class.cpp  Snake.class.cpp  Time.class.cpp  game_entity.class.cpp  libft.cpp  main.cpp
